# home-manager-diff

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml  shell.nix
.github/workflows/: flake-check.yaml  update-flake-lock-dev.yaml  update-flake-lock.yaml
dev/: README.md  flake.nix
nix/: hm-module.nix  package.nix
src/: hmd.py
